# ai-quant-research-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  universe_us.yaml
notebooks/: 01_data_loader.ipynb
src/quantlab/backtest/: analyzer.py  cost.py  engine.py  portfolio.py
src/quantlab/data/: calendar.py  loader.py  storage.py
src/quantlab/evaluation/: factor_eval.py  metrics.py  report.py
src/quantlab/features/: factors.py  returns.py  technical.py
src/quantlab/models/: baseline.py  lightgbm_model.py  sklearn_models.py
src/quantlab/utils/: config.py
tests/: test_backtest.py  test_data_loader.py  test_factors.py  test_metrics.py
