[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.1.0"
description = "AI Quant Research Lab: multi-factor quantitative research system"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "yfinance>=0.2",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "joblib>=1.3",
]

[project.optional-dependencies]
ml  = ["lightgbm>=4.0"]
eval = ["alphalens-reloaded>=0.4"]
qlib = ["pyqlib>=0.9"]
dev  = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
